# sqliters

./: Cargo.toml  README.md
.github/workflows/: rust.yml  tests.yml
src/: app.rs  cli.rs  db.rs  main.rs  model.rs  popup.rs  ui.rs
src/database/: mod.rs  sqlite.rs
