[package]
name = "sqliters"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for browsing SQLite databases"
repository = "https://github.com/attilarepka/sqliters"
keywords = ["sqlite", "terminal", "ui"]
licence = "MIT"
authors = ["Attila Repka"]

[package.metadata.deb]
revision = ""

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
hex = "0.4.3"
ratatui = "0.30.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
